--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=RuneCCG
+author=BakaZora
+description=The Runelite Companion App for the RuneCCG Card Collection game! Earn coins by gaining xp, then spend them on opening packs!
+tags=CCG,cards,collection,collecting,packs,decks,TCG,card,game,external, xp, experience
+plugins=com.runeccg.RuneCCGPlugin
